# aire-course

./: .gitignore  README.md
.github/workflows/: a2a-agent-image-lab4.yaml  flux-push-lab3.yaml  flux-push-lab4.yaml  flux-push-lab5.yaml  flux-push.yaml  sandbox-router-image-lab5.yaml  time-agent-image-lab3.yaml  time-agent-image-lab5.yaml  time-mcp-image-lab3.yaml  time-mcp-image-lab5.yaml
lab-1/: README.md  agentgateway-routing.tf  agentgateway-secrets.tf  agentgateway.tf  kagent-secrets.tf  providers.tf  variables.tf  versions.tf
lab-1/adr-evaluation/: README.md
lab-1/helm-values/external-secrets/: values.yaml
lab-1/terraform-solution/: README.md  agentgateway-routing.tf  external-secrets.tf  kagent-routing.tf  kagent.tf
lab-2/: README.md
lab-2/abox/: Makefile
lab-3/: README.md
lab-3/abox/: Makefile
lab-3/research/: README.md
lab-4/: README.md
lab-4/abox/: Makefile
lab-4/agent/: .dockerignore  .gitignore  README.md  pyproject.toml
lab-4/openspec/: config.yaml
lab-5/: README.md
lab-5/abox/: CODEBASE.md  Makefile
lab-5/sandbox-router/: .gitignore  sandbox_router.py
lab-5/time-agent/: .gitignore  Dockerfile  README.md  pyproject.toml
lab-5/time-mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml
lab-5/time-mcp-server/src/core/: server.py  utils.py
lab-5/time-mcp-server/src/tools/: __init__.py  convert_time.py  echo.py  get_current_time.py
lab-5/time-mcp-server/tests/: conftest.py  test_discovery.py  test_tools.py
lab-5/time-mcp-server/tests/unit/: test_tracing.py
lab-6/: README.md
lab-6/abox/: Makefile
(+104 files in other folders)
