[project]
name = "time-mcp-server"
version = "0.1.0"
description = "time-mcp-server MCP server built with FastMCP"
authors = [
    {name = "George Artemiev", email = "nissan547@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.0.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-mcp>=1.0.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
"time-mcp-server-server" = "src.main:main"
dev = "src.main:dev"
dev-http = "src.main:dev"
start = "src.main:start"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "black==26.1.0",
    "mypy==1.19.1",
    "ruff==0.15.1",
    "types-PyYAML==6.0.12.20250915",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::authlib.deprecate.AuthlibDeprecationWarning",
]
